# devtools

./: .dockerignore  .env  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.js  AGENTS.md  CHEATSHEET.md  CLAUDE.md  DEBUGGING.md  DEVELOPMENT.md  DOCGEN_SETUP.md  Dockerfile  Dockerfile.hyperliquid  EXPERIMENTAL.md  PRINCIPLES.md  README.md  README_BONADOCS.md  WORKFLOW.md  aptos-plan.md  cspell.json  docker-compose.local.yaml  docker-compose.registry.yaml  docker-compose.templates.yaml  docker-compose.yaml  logs.txt  my_key.pub  my_key.pub.pub  new-instruction-checklist.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  send-oapp-solana-payment-analysis.md  test.ts  tsconfig.json  (+4 more)
examples/lzapp-migration/programs/oft202/: Cargo.toml
examples/lzapp-migration/programs/oft202/src/: lib.rs  msg_codec.rs  options.rs
examples/lzapp-migration/programs/oft202/tests/: msg_codec.rs
examples/oapp-solana-counter/programs/counter/: Cargo.toml  build.rs  readme.md
examples/oapp-solana-counter/programs/counter/src/: errors.rs  lib.rs
examples/oapp-solana/programs/my_oapp/: Cargo.toml  build.rs
examples/oapp-solana/programs/my_oapp/src/: errors.rs  lib.rs  msg_codec.rs
examples/oft-solana/: .env.example  .eslintignore  .gitignore  .prettierignore  AGENTS.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  buffer.json  check-actual-config.ts  foundry.toml  get-shared-decimals-example.ts  hardhat.config.ts  jest.config.js  jest.config.ts  keypair.json  layerzero.config.ts  package.json  pnpm-lock.yaml  rust-toolchain.toml  shared-decimals-explanation.md  test-multisig.ts  tsconfig.json
examples/oft-solana-composer-library/programs/endpoint-mock/: Cargo.toml
examples/oft-solana-composer-library/programs/endpoint-mock/src/: lib.rs
examples/oft-solana/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
examples/oft-solana/.anchor/test-ledger/rocksdb/: 000054.sst  000055.sst  000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  IDENTITY  LOG  LOG.old.1726593234795770  MANIFEST-000062  OPTIONS-000066  OPTIONS-000068
examples/oft-solana/artifacts/contracts/MyOFT.sol/: MyOFT.dbg.json  MyOFT.json
examples/oft-solana/cache/foundry/: solidity-files-cache.json
examples/oft-solana/cache/hardhat/: solidity-files-cache.json
examples/oft-solana/clients/dvn/: Cargo.toml
examples/oft-solana/clients/dvn/idl/: dvn.json
examples/oft-solana/clients/dvn/src/: dvn.rs  dvn_pda.rs  lib.rs
examples/oft-solana/clients/endpoint/: Cargo.toml
examples/oft-solana/clients/endpoint/idl/: endpoint.json
examples/oft-solana/clients/endpoint/src/: endpoint.rs  endpoint_pda.rs  lib.rs
examples/oft-solana/clients/executor/: Cargo.toml
examples/oft-solana/clients/executor/idl/: executor.json
examples/oft-solana/clients/executor/src/: executor.rs  executor_pda.rs  lib.rs
examples/oft-solana/clients/oft/: Cargo.toml
examples/oft-solana/clients/oft/idl/: oft.json
examples/oft-solana/clients/oft/src/: event_pda.rs  lib.rs  oft302.rs  oft_pda.rs
examples/oft-solana/clients/uln/: Cargo.toml
examples/oft-solana/clients/uln/idl/: uln.json
examples/oft-solana/clients/uln/src/: lib.rs  msg_lib_pda.rs  uln.rs  uln_pda.rs
examples/oft-solana/deploy/: MyOFT.ts
examples/oft-solana/deployments/base-mainnet/: MyOFT.json
examples/oft-solana/deployments/ethereum-mainnet/: L1OFTAdapter.json  MintableUSDXMock.json
examples/oft-solana/deployments/sepolia-testnet/: MyOFTMock.json
examples/oft-solana/deployments/solana-mainnet/: Mock.json  OFT.json
examples/oft-solana/deployments/solana-testnet/: OFT.json
examples/oft-solana/docs/: Aptos.md  move.layerzero.config.ts
examples/oft-solana/programs/endpoint-mock/: Cargo.toml
examples/oft-solana/programs/endpoint-mock/src/: lib.rs
examples/oft-solana/programs/oft/: Cargo.toml
examples/oft-solana/programs/oft/src/: compose_msg_codec.rs  errors.rs  events.rs  lib.rs  msg_codec.rs
examples/oft-solana/programs/transfer-hook/: Cargo.toml  README.md
examples/oft-solana/programs/transfer-hook/src/: errors.rs  lib.rs
examples/oft-solana/scripts/: codama.ts  generate-features.ts  resolve-oft-id.js
examples/oft-solana/tasks/: index.ts
examples/oft-solana/tasks/aptos/: aptosEndpointV2.ts  aptosSdkFactory.ts  index.ts
examples/oft-solana/tasks/common/: aptosSdkFactory.ts  config.get.ts  sendOFT.ts  taskHelper.ts  types.ts  utils.ts  wire.ts
examples/oft-solana/tasks/evm/: send.ts  sendEvm.ts
examples/oft-solana/tasks/solana/: base58.ts  burn.ts  clear.ts  clearPayload.ts  createOFT.ts  createOFTAdapter.ts  debug.ts  deploy.ts  getPrioFees.ts  getRateLimits.ts  index.ts  initConfig.ts  mint.ts  mintTo.ts  multisig.ts  nilify.ts  renounceFreeze.ts  retryMessage.ts  retryPayload.ts  sendOFT.ts  sendSolana.ts  setAuthority.ts  setFreezeAuthority.ts  setInboundRateLimit.ts  setMetadataAuthority.ts  setOFTMintAuthority.ts  setOutboundRateLimit.ts  setRateLimit.ts  setUpdateAuthority.ts  skip.ts  updateMetadata.ts  utils.ts
examples/oft-solana/tasks/solana/endpoint/: burn.ts  clear.ts  endpointUtils.ts  nilify.ts  skip.ts
examples/oft-solana/tasks/utils/: getFee.ts
examples/oft-solana/test/anchor/: constants.ts  got-shim.cjs  index.test.ts  oft.test.ts  transfer-hook.test.ts  types.ts  utils.ts
examples/oft-solana/test/anchor/helpers/: error-assertions.ts  index.ts  (+3 more)
examples/oft-solana/test/foundry/: MyOFT.t.sol
examples/oft-solana/test/scripts/: solanaUtils.script.test.ts
examples/oft-solana/tests/: constants.ts  got-shim.cjs  index.test.ts  oft.test.ts  types.ts  utils.ts
examples/oft-solana/tests/helpers/: error-assertions.ts  oft-layerzero-simulation.ts  oft-quotes.ts  test-keys.ts
examples/oft-solana/tests/suites/: init_oft.test.ts  layerzero-infrastructure.test.ts  layerzero-simulation.test.ts  quote_instructions.test.ts  send_and_receive.test.ts  set_oft_config.test.ts  set_peer_config.test.ts  withdraw_fee.test.ts
(+2976 files in other folders)
