[workspace]
members = ["programs/*"]
resolver = "2"

# [features]
# idl-build = ["anchor-lang/idl-build"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# [patch.crates-io]
# spl-token-2022 = { git = "https://github.com/solana-program/token-2022.git", tag = "program@v7.0.0" }
#  https://github.com/solana-program/token-2022/compare/program@v6.0.0...program@v8.0.0


[workspace.dependencies]
anchor-lang = "=0.31.1"
anchor-spl = { git = "https://github.com/LayerZero-Labs/anchor.git", branch = "0.31.1-token2022v8" }
solana-program = "=2.3.0"
solana-helper = "0.1.0"
cpi-helper = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "200cda254120375f40ed0a7e89931afb897b8891" }
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "200cda254120375f40ed0a7e89931afb897b8891", package = "oapp-latest" }
utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "200cda254120375f40ed0a7e89931afb897b8891", package = "utils-latest" }
