[package]
name = "oft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "oapp/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "7aebbd7c79b2dc818f7bb054aed2405ca076b9d6" }
utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "7aebbd7c79b2dc818f7bb054aed2405ca076b9d6" }
solana-helper = "0.1.0"