[package]
name = "my_oapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_oapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["oapp/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-helper = "0.1.0"
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev= "34321ac15e47e0dafd25d66659e2f3d1b9b6db8f" }