[package]
name = "endpoint-mock"
version = "0.1.0"
description = "Endpoint Mock"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "endpoint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"]}
cpi-helper = { workspace = true }
