[package]
name = "oft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "oapp/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/LayerZero-Labs/anchor.git", branch = "0.31.1-token2022v8" }
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "anchor-0.31.1", package = "oapp-latest" }
utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "anchor-0.31.1", package = "utils-latest" }
solana-helper = "0.1.0"
